# APR-CNN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.cfg  setup.py
apr_models/: setup.py
apr_models/apr_models/: __init__.py
apr_models/apr_models/unet/: __init__.py  hybrid_model.py  hybrid_unet_parts.py  stardist_hybrid_model.py  stardist_model.py  unet_model.py  unet_parts.py
apr_models/apr_models/utils/: __init__.py  dataset.py
pyapr/aprnet/: __init__.py  conv.py  pool.py  stardist_utils.py  upsample.py
pyapr/aprnet/cuda/: __init__.py  conv.py  maxpool.py  upsample.py  utils.py
pyapr/aprnet/cuda/src/: common.hpp  conv111_gpu.cu  conv333_gpu.cu  conv333_gpu_backward.cu  conv_gpu.hpp  fill_tree_gpu.cu  fill_tree_gpu.hpp  maxpool_gpu.cu  maxpool_gpu.hpp  nonempty_rows.cu  nonempty_rows.hpp  reconstruct_gpu.cu  reconstruct_gpu.hpp  restrict_gpu.cu  restrict_gpu.hpp  sample_particles_gpu.cu  sample_particles_gpu.hpp  upsample_constant_gpu.cu  upsample_constant_gpu.hpp  wrap_conv_gpu.hpp  wrap_maxpool_gpu.hpp  wrap_reconstruct_gpu.hpp  wrap_restrict_gpu.hpp  wrap_sample_particles_gpu.hpp  wrap_upsample_const_gpu.hpp
pyapr/aprnet/src/: APRNetImageBuffer.hpp  conv.hpp  helpers.hpp  kernel.hpp  maxpool.hpp  upsample.hpp  utils.hpp  wrap_conv.hpp  wrap_pool.hpp  wrap_upsample.hpp  wrapper.hpp
pyapr/data_containers/src/: BindAPR.hpp  BindParameters.hpp  BindParticleData.hpp
pyapr/tests/: test_aprnet.py  test_filter.py  test_restoration.py
wrappers/: pythonBind.cpp
